Refactor backend to resolve 25 SonarQube code smells